# wallet-cast-be

./: .ruffignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.local.yml  docker-compose.test.yml  docker-entry.sh  env.example  pyproject.toml  run.sh
.github/: copilot-instructions.md
.github/prompts/: generateUnitTests.prompt.md
.github/workflows/: ci.yml  docker.yml  security.yml
app/: app_config.py  cw-lib.yml  main.py  shared-lib.yml
app/api/: docs.py
app/api/admin/: config.py
app/api/demo/: auth.py
app/api/flc/: dependency.py  errors.py
app/api/flc/routers/: app_config.py  channel.py  session.py  session_egress.py  session_egress_caption.py  session_ingress.py  session_ingress_caption.py  session_viewer.py
app/api/flc/schemas/: base.py  channel.py  serializers.py  session.py  session_egress.py  session_ingress.py
app/api/v1/: dependency.py  errors.py
app/api/v1/routers/: app_config.py  channel.py  session.py  session_egress.py  session_egress_caption.py  session_ingress.py  session_ingress_caption.py  session_viewer.py
app/api/v1/schemas/: app_config.py  base.py  channel.py  session.py  session_egress.py  session_ingress.py  validators.py
app/api/webhooks/: README.md  __init__.py  livekit.py  mux.py  mux_alias.py
app/api/webhooks/schemas/: __init__.py  livekit.py  mux.py
app/cw/: .gitignore  README.md  __init__.py  config.py  cw-lib-example.yml  lock.py  recv_cs.py  schema.py  worker.py
app/cw/api/: utils.py
app/cw/api/admin/: check_data.py
app/cw/domain/: entity_change.py
app/cw/storage/: redis.py
app/cw/utils/: __init__.py  diff.py
app/domain/: __init__.py
app/domain/live/: __init__.py
app/domain/utils/: idgen.py  locale_validators.py
app/schemas/: __init__.py  channel.py  init.py  init_schemas.py  schema_utils.py  session.py  session_runtime.py  session_state.py  transcript.py  user_configs.py
app/services/: __init__.py  api_cache.py  api_rate_limiter.py  app_db.py  cw_livekit.py  cw_mux.py  cw_s3.py  cw_translator.py
app/services/cbx_live/: cbx_live_client.py  cbx_live_schemas.py
app/services/integrations/: livekit_service.py  mux_service.py  s3_storage.py  translator_service.py
app/shared/: README.md  __init__.py  config.py  recv_ks.py  shared-lib-example.yml  token_bucket.py
app/shared/api/: errors.py  health.py  utils.py
app/shared/storage/: mongo.py  postgres.py
app/shared/utils/: __init__.py
app/utils/: app_errors.py  flc_errors.py
app/workers/: api_jobs_worker.py  base.py  caption_agent_worker.py  keda_metrics.py  utils.py
docs/: AGENTS.md  SECURITY_REDACTION.md
docs/features/: caption_s3_upload.md
docs/features/captions/: README.md  frontend_integration.md  participant_language_update.md  speaker_id_issue.md
docs/features/integrations/: mux_webhook_guide.md
docs/features/sessions/: room_session_relationship.md  session_migration_guide.md  session_state.md
docs/features/users/: update_participant_name.md  user_whitelist.md
docs/lint/: RUFF_GUIDE.md
docs/unit_testing/: api_layer_guidelines.md  domain_layer_guidelines.md  global_guidelines.md  service_layer_guidelines.md
examples/: README.md  caption_example.py  caption_retrieval_example.py  caption_translation_example.py  livekit_api_example.py  livekit_room_metadata_example.py  livekit_token_example.py  s3_example.py  segmented_vtt_example.py  subtitle_example.py  transcript_query_example.py  update_participant_name_example.py
integration_tests/: __init__.py  conftest.py
integration_tests/services/: test_mux_integration.py
tests/: conftest.py  test_admin_config.py
tests/api/: test_user_whitelist.py
tests/api/webhooks/: test_livekit_host_cleanup.py  test_mux_webhook.py
tests/fixtures/: mongo_fixtures.py  postgres_fixtures.py  redis_fixtures.py  test_mongo_fixtures.py
tests/services/: test_cbx_live_schemas.py
tests/workers/: test_host_cleanup_worker.py
tools/: README_LINT.md  code_lint.py  init-mongo.js  init_db.sh  mock_cbx_live.py  mock_core_api.py  mock_corebe.py  mock_external_live.py  redaction_scan.py  test_code_lint.py
(+89 files in other folders)
